finalize SPI architecture, update metrics collector, monitoring service and elastic provider api adding elastic client delegator